Update HTML file: Add images buttons, add css and javascript links.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,31 @@
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
 
-<div class="carousel-container">
-
-    <div class="carousel-slide">
+    <div class="c-container">
+        <div class="c-slide">
         <img src="images/cape-kamui.JPG" alt="Image from Cape Kamui">
     </div>
 
-    <div class="carousel-slide">
-        <img src="images/momiji.JPG" alt="Autumn leaves image">
+    <div class="c-slide">
+        <img src="images/momiji.JPG" alt="Autumn leaves">
     </div>
-    
-    <div class="carousel-slide">
-        <img src="images/mount-fuji.JPG" alt="Image from Mount Fuji">
+
+    <div class="c-slide">
+        <img src="image3.jpg" alt="Image from Mount Fuji">
     </div>
 
 </div>
+
+<button class="prev-button">&lt;</button>
+<button class="next-button">&gt;</button>
+
+
+<script src="script.js"></script>    
+</body>
+</html>
