Fix image 3 name.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="c-slide">
-        <img src="image3.jpg" alt="Image from Mount Fuji">
+        <img src="images/mount-fuji.JPG" alt="Image from Mount Fuji">
     </div>
 
 </div>
